# akvdb

./: .gitignore  Cargo.toml  README.md
.github/workflows/: crosscompile.yml  release.yml
src/: akvdb.rs  encrypter.rs  lib.rs
