[package]
name = "akvdb"
version = "0.1.0"
edition = "2021"
authors = ["Tim McNamara <author@rustinaction.com>", "Olle Wreede <olle@wreede.se>"]

[dependencies]
bincode = "1.3.3"
blake3 = "1.3.1"
byteorder = "1.2"
serde = "1.0.145"
serde_derive = "1.0.145"

[lib]
name = "libactionkv"
path = "src/lib.rs"

[[bin]]
name = "akvdb"
path = "src/akvdb.rs"
